--- a/20240830_PaNs.qmd
+++ b/20240830_PaNs.qmd
@@ -7,7 +7,15 @@ author:
     affiliations: School of Health & Wellbeing 
 date: 2024-08-30
 date-format: long
-format: html
+format:
+  html:
+    code-links:
+      - text: Back to Repository
+        icon: github
+        href: https://github.com/omiridoue/20240830_PaNs
+      - text: Run Code in GitPod Session
+        icon: globe
+        href: https://gitpod.io/#github.com/omiridoue/20240830_PaNs
 editor: visual
 from: markdown+emoji
 toc: TRUE
